--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
   "author": "piyush",
   "license": "ISC",
   "engines": {
-    "node": ">=14.0.0"
+    "node": "14.x"
   },
   "dependencies": {
     "cors": "^2.8.5",
