--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,9 @@
   },
   "author": "piyush",
   "license": "ISC",
+  "engines": {
+  "node": ">=14.0.0"
+}
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
