--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
     "nodemon": "^3.0.1",
-    "punycode": "^2.3.1"
+    "punycode": "^2.3.1",
+     "mongodb": "^4.0.0",
+     "bson": "^5.0.0"
   }
 }
