--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "author": "piyush",
   "license": "ISC",
   "engines": {
-  "node": ">=21.0.0"
+  "node": "21.2.0"
 },
   "dependencies": {
     "cors": "^2.8.5",
